@@ -65,7 +65,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.18</version>
+            <version>8.0.11</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
@@ -92,6 +92,11 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.12</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
 
 
         <dependency>
@@ -107,5 +112,31 @@
 
     <build>
         <finalName>GS_Spring_002</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.xml.bind</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>--add-modules java.se.ee</argLine>
+                    <argLine>--add-modules java.xml.bind</argLine>
+                    <!--<srgLine>&#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED</srgLine>-->
+
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
